# EventDetection

./: .travis.yml  CMakeLists.txt  LICENSE  Manual.md  README.md  setup.py
fast5/include/: fast5.hpp
src/: EventDetectMain.cpp  EventDetectMain.hpp  EventDetection.cpp  EventDetection.hpp  Utils.cpp  Utils.hpp  event_detection.c  main.cpp  scrappie_structures.h
src/event_detect/: PythonBindings.cpp
src/ntk/: PythonBindings.cpp  event_detect.py
tests/: TestEventDetect.cpp  TestEventDetect.hpp  test_event_detect.py
